Fix overlapping side nav menu

--- a/vs-code/theme.scss
+++ b/vs-code/theme.scss
@@ -138,6 +138,8 @@ body {
       position: relative;
 
       > details {
+        display: flex;
+
         > summary {
           display: inline;
           cursor: pointer;
